--- a/app/src/main/res/layout/activity_main_u.xml
+++ b/app/src/main/res/layout/activity_main_u.xml
@@ -3,7 +3,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="#084B8A">
 
 
         <android.support.design.widget.CoordinatorLayout
@@ -51,6 +52,8 @@
                                 android:id="@+id/ivUserProfilePhoto"
                                 android:layout_width="@dimen/user_profile_avatar_size"
                                 android:layout_height="@dimen/user_profile_avatar_size"
+                                android:background="#ffffff"
+                                android:src="@drawable/Cara_de_Dr_House"
                                 android:layout_marginRight="16dp" />
 
                             <LinearLayout
@@ -120,4 +123,102 @@
             </android.support.design.widget.AppBarLayout>
 
         </android.support.design.widget.CoordinatorLayout>
+
+
+    <LinearLayout
+        android:id="@+id/email_login_form"
+        android:layout_width="match_parent"
+        android:layout_marginTop="200dp"
+        android:layout_height="wrap_content"
+        android:clipToPadding="false"
+        android:orientation="vertical"
+        android:paddingBottom="24dp"
+        android:paddingLeft="24dp"
+        android:paddingRight="24dp"
+        android:paddingTop="24dp"
+        android:background="#084B8A">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="?attr/actionBarSize"
+                android:layout_height="?attr/actionBarSize"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp"
+                android:background="#04B404"
+                app:srcCompat="@android:drawable/ic_dialog_email"
+                android:id="@+id/imageView6" />
+
+            <TextView
+                android:id="@+id/email"
+                android:background="#ffffff"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:hint="City"
+                android:inputType="textEmailAddress"
+                android:textSize="16sp"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:layout_toRightOf="@+id/imageView6"
+                android:layout_toEndOf="@+id/imageView6" />
+
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:paddingTop="10dp"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="?attr/actionBarSize"
+                android:layout_height="?attr/actionBarSize"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp"
+                android:background="#04B404"
+                app:srcCompat="@android:drawable/ic_lock_idle_lock"
+                android:id="@+id/imageView7" />
+
+            <TextView
+                android:id="@+id/password"
+                android:background="#ffffff"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp"
+                android:layout_width="match_parent"
+                android:textSize="16sp"
+                android:layout_height="?attr/actionBarSize"
+                android:hint="Material"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:layout_toRightOf="@+id/imageView7"
+                android:layout_toEndOf="@+id/imageView7" />
+
+
+        </RelativeLayout>
+
+        <Button
+            android:id="@+id/email_sign_in_button"
+            style="?android:textAppearanceSmall"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="#04B404"
+            android:text="Search"
+            android:textStyle="bold"
+            android:textColor="#ffffff"
+            android:textSize="16sp"/>
+
+    </LinearLayout>
     </RelativeLayout>
