--- a/app/src/main/res/layout/activity_list_convs.xml
+++ b/app/src/main/res/layout/activity_list_convs.xml
@@ -140,9 +140,35 @@
         android:paddingTop="24dp"
         android:background="#084B8A">
 
-        <RelativeLayout
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" />
+        </ScrollView>
+
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/email"
+                android:background="#ffffff"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp"
+                android:layout_width="221dp"
+                android:layout_height="?attr/actionBarSize"
+                android:hint="Blue Fruit Corp \n 0500-4533456"
+                android:inputType="textEmailAddress"
+                android:textSize="16sp"
+                android:maxLines="2"
+                android:layout_t="@+id/imageView6" />
 
             <ImageView
                 android:layout_width="?attr/actionBarSize"
@@ -155,30 +181,40 @@
                 app:srcCompat="@android:drawable/ic_dialog_email"
                 android:id="@+id/imageView6" />
 
+            <ImageView
+                android:layout_width="?attr/actionBarSize"
+                android:layout_height="?attr/actionBarSize"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp"
+                android:background="#04B404"
+                app:srcCompat="@android:drawable/ic_dialog_email"
+                android:id="@+id/imageView1" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:paddingTop="10dp"
+            android:orientation="horizontal"
+            android:layout_height="wrap_content">
+
             <TextView
-                android:id="@+id/email"
+                android:id="@+id/password"
                 android:background="#ffffff"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:hint="City"
-                android:inputType="textEmailAddress"
+                android:layout_width="221dp"
                 android:textSize="16sp"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:layout_toRightOf="@+id/imageView6"
-                android:layout_toEndOf="@+id/imageView6" />
-
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:paddingTop="10dp"
-            android:layout_height="wrap_content">
+                android:layout_height="?attr/actionBarSize"
+                android:hint="Blue Fruit Corp \n 0500-4533456"
+                android:maxLines="2"
+                android:layout_toRightOf="@+id/imageView7"
+                android:layout_toEndOf="@+id/imageView7" />
 
             <ImageView
                 android:layout_width="?attr/actionBarSize"
@@ -191,36 +227,86 @@
                 app:srcCompat="@android:drawable/ic_lock_idle_lock"
                 android:id="@+id/imageView7" />
 
+            <ImageView
+                android:layout_width="?attr/actionBarSize"
+                android:layout_height="?attr/actionBarSize"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp"
+                android:background="#04B404"
+                app:srcCompat="@android:drawable/ic_lock_idle_lock"
+                android:id="@+id/imageView2" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:paddingTop="10dp"
+            android:orientation="horizontal"
+            android:layout_height="wrap_content">
+
             <TextView
-                android:id="@+id/password"
+                android:id="@+id/password1"
                 android:background="#ffffff"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
-                android:layout_width="match_parent"
+                android:layout_width="222dp"
                 android:textSize="16sp"
                 android:layout_height="?attr/actionBarSize"
-                android:hint="Material"
-                android:maxLines="1"
-                android:singleLine="true"
+                android:hint="Blue Fruit Corp \n 0500-4533456"
+                android:maxLines="2"
                 android:layout_toRightOf="@+id/imageView7"
                 android:layout_toEndOf="@+id/imageView7" />
 
+            <ImageView
+                android:layout_width="?attr/actionBarSize"
+                android:layout_height="?attr/actionBarSize"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp"
+                android:background="#04B404"
+                app:srcCompat="@android:drawable/ic_lock_idle_lock"
+                android:id="@+id/imageView71" />
 
-        </RelativeLayout>
+            <ImageView
+                android:layout_width="?attr/actionBarSize"
+                android:layout_height="?attr/actionBarSize"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp"
+                android:background="#04B404"
+                app:srcCompat="@android:drawable/ic_lock_idle_lock"
+                android:id="@+id/imageView3" />
 
-        <Button
-            android:id="@+id/email_sign_in_button"
-            style="?android:textAppearanceSmall"
-            android:layout_width="match_parent"
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:background="#04B404"
-            android:text="Search"
-            android:textStyle="bold"
-            android:textColor="#ffffff"
-            android:textSize="16sp"/>
+            android:layout_marginTop="10sp"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="< Previous"
+                android:textColor="#ffffff"
+                android:id="@+id/pbutton"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="35sp"
+                android:text="  Next >  "
+                android:textColor="#ffffff"
+                android:id="@+id/nbutton"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
