--- a/app/src/main/res/layout/activity_main_u.xml
+++ b/app/src/main/res/layout/activity_main_u.xml
@@ -153,7 +153,7 @@
                 app:srcCompat="@android:drawable/ic_dialog_email"
                 android:id="@+id/imageView6" />
 
-            <TextView
+            <Spinner
                 android:id="@+id/email"
                 android:background="#ffffff"
                 android:paddingLeft="10dp"
@@ -189,7 +189,7 @@
                 app:srcCompat="@android:drawable/ic_lock_idle_lock"
                 android:id="@+id/imageView7" />
 
-            <TextView
+            <Spinner
                 android:id="@+id/password"
                 android:background="#ffffff"
                 android:paddingLeft="10dp"
