--- a/app/src/main/res/layout/activity_main_c.xml
+++ b/app/src/main/res/layout/activity_main_c.xml
@@ -49,7 +49,7 @@
                         android:clipChildren="false">
 
                         <ImageView
-                            android:id="@+id/ivUserProfilePhoto"
+                            android:id="@+id/ProfilePhoto"
                             android:layout_width="@dimen/user_profile_avatar_size"
                             android:layout_height="@dimen/user_profile_avatar_size"
                             android:background="#ffffff"
@@ -85,7 +85,7 @@
                                 android:textSize="12sp" />
 
                             <Button
-                                android:id="@+id/btnFollow"
+                                android:id="@+id/btn_edit"
                                 android:layout_width="match_parent"
                                 android:layout_height="24dp"
                                 android:layout_marginRight="24dp"
@@ -151,12 +151,13 @@
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
+                android:clickable="true"
                 android:background="#04B404"
                 app:srcCompat="@android:drawable/ic_dialog_email"
                 android:id="@+id/imageView6" />
 
             <Spinner
-                android:id="@+id/email"
+                android:id="@+id/city"
                 android:background="#ffffff"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
@@ -164,11 +165,9 @@
                 android:paddingTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:hint="City"
                 android:inputType="textEmailAddress"
                 android:textSize="16sp"
                 android:maxLines="1"
-                android:singleLine="true"
                 android:layout_toRightOf="@+id/imageView6"
                 android:layout_toEndOf="@+id/imageView6" />
 
@@ -188,11 +187,12 @@
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
                 android:background="#04B404"
+                android:clickable="true"
                 app:srcCompat="@android:drawable/ic_lock_idle_lock"
                 android:id="@+id/imageView7" />
 
             <Spinner
-                android:id="@+id/password"
+                android:id="@+id/material"
                 android:background="#ffffff"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
@@ -201,9 +201,6 @@
                 android:layout_width="match_parent"
                 android:textSize="16sp"
                 android:layout_height="?attr/actionBarSize"
-                android:hint="Material"
-                android:maxLines="1"
-                android:singleLine="true"
                 android:layout_toRightOf="@+id/imageView7"
                 android:layout_toEndOf="@+id/imageView7" />
 
@@ -211,7 +208,7 @@
         </RelativeLayout>
 
         <Button
-            android:id="@+id/email_sign_in_button"
+            android:id="@+id/send_button"
             style="?android:textAppearanceSmall"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
