--- a/app/src/main/res/layout/activity_request.xml
+++ b/app/src/main/res/layout/activity_request.xml
@@ -53,7 +53,7 @@
                             android:layout_width="@dimen/user_profile_avatar_size"
                             android:layout_height="@dimen/user_profile_avatar_size"
                             android:background="#ffffff"
-                            android:src="@drawable/Cara_de_Dr_House"
+                            android:src="@drawable/drhouse"
                             android:layout_marginRight="16dp" />
 
                         <LinearLayout
