--- a/app/src/main/res/layout/activity_main_c.xml
+++ b/app/src/main/res/layout/activity_main_c.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/activity_main_c"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#084B8A">
-
+    android:background="#084B8A"
+    tools:context="com.example.dayana.myapplication.MainActivityC">
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/content"
@@ -19,8 +20,7 @@
             android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#084B8A"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+            android:background="#084B8A">
 
             <android.support.design.widget.CollapsingToolbarLayout
                 android:id="@+id/collapsing_toolbar"
@@ -50,8 +50,8 @@
 
                         <ImageView
                             android:id="@+id/ProfilePhoto"
-                            android:layout_width="@dimen/user_profile_avatar_size"
-                            android:layout_height="@dimen/user_profile_avatar_size"
+                            android:layout_width="88dp"
+                            android:layout_height="88dp"
                             android:background="#ffffff"
                             android:src="@drawable/apple"
                             android:layout_marginRight="16dp" />
