--- a/app/src/main/res/layout/activity_main_u.xml
+++ b/app/src/main/res/layout/activity_main_u.xml
@@ -1,130 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/activity_main_u"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#084B8A"
+    tools:context="com.example.dayana.myapplication.MainActivityU">
+
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/content"
+        android:background="#084B8A"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="#084B8A">
+        android:orientation="vertical">
 
-
-        <android.support.design.widget.CoordinatorLayout
-            android:id="@+id/content"
-            android:background="#084B8A"
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:background="#084B8A">
 
-
-            <android.support.design.widget.AppBarLayout
-                android:id="@+id/appBarLayout"
+            <android.support.design.widget.CollapsingToolbarLayout
+                android:id="@+id/collapsing_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#084B8A"
-                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+                android:layout_height="match_parent"
+                app:contentScrim="?attr/colorPrimary"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-                <android.support.design.widget.CollapsingToolbarLayout
-                    android:id="@+id/collapsing_toolbar"
+                <LinearLayout
+                    android:id="@+id/vUserProfileRoot"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:contentScrim="?attr/colorPrimary"
-                    app:layout_scrollFlags="scroll|exitUntilCollapsed">
+                    android:layout_height="wrap_content"
+                    android:background="#084B8A"
+                    android:clipChildren="false"
+                    android:clipToPadding="false"
+                    android:orientation="vertical"
+                    android:paddingBottom="24dp"
+                    android:paddingLeft="24dp"
+                    android:paddingRight="24dp"
+                    android:paddingTop="24dp"
+                    app:layout_collapseMode="parallax">
 
                     <LinearLayout
-                        android:id="@+id/vUserProfileRoot"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="#084B8A"
-                        android:clipChildren="false"
-                        android:clipToPadding="false"
-                        android:orientation="vertical"
-                        android:paddingBottom="24dp"
-                        android:paddingLeft="24dp"
-                        android:paddingRight="24dp"
-                        android:paddingTop="24dp"
-                        app:layout_collapseMode="parallax">
+                        android:clipChildren="false">
+
+                        <ImageView
+                            android:id="@+id/ProfilePhoto"
+                            android:layout_width="88dp"
+                            android:layout_height="88dp"
+                            android:background="#ffffff"
+                            android:src="@drawable/drhouse"
+                            android:layout_marginRight="16dp" />
 
                         <LinearLayout
-                            android:layout_width="match_parent"
+                            android:id="@+id/vUserDetails"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:clipChildren="false">
+                            android:layout_weight="1"
+                            android:orientation="vertical">
 
-                            <ImageView
-                                android:id="@+id/ProfilePhoto"
-                                android:layout_width="@dimen/user_profile_avatar_size"
-                                android:layout_height="@dimen/user_profile_avatar_size"
-                                android:background="#ffffff"
-                                android:src="@drawable/drhouse"
-                                android:layout_marginRight="16dp" />
-
-                            <LinearLayout
-                                android:id="@+id/vUserDetails"
-                                android:layout_width="wrap_content"
+                            <TextView
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:orientation="vertical">
+                                android:text="John Smith"
+                                android:textColor="#ffffff"
+                                android:textSize="24sp" />
 
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="John Smith"
-                                    android:textColor="#ffffff"
-                                    android:textSize="24sp" />
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="\@jsmith"
+                                android:textColor="#bbbbbb"
+                                android:textSize="12sp" />
 
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="\@jsmith"
-                                    android:textColor="#bbbbbb"
-                                    android:textSize="12sp" />
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="Mobile development passionate."
+                                android:textColor="#ffffff"
+                                android:textSize="12sp" />
 
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Mobile development passionate."
-                                    android:textColor="#ffffff"
-                                    android:textSize="12sp" />
+                            <Button
+                                android:id="@+id/btn_edit"
+                                android:layout_width="match_parent"
+                                android:layout_height="24dp"
+                                android:layout_marginRight="24dp"
+                                android:layout_marginTop="8dp"
+                                android:background="#04B404"
+                                android:text="Edit profile"
+                                android:textColor="#ffffff"
+                                android:textSize="12sp" />
 
-                                <Button
-                                    android:id="@+id/btn_edit"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="24dp"
-                                    android:layout_marginRight="24dp"
-                                    android:layout_marginTop="8dp"
-                                    android:background="#04B404"
-                                    android:text="Edit profile"
-                                    android:textColor="#ffffff"
-                                    android:textSize="12sp" />
-
-                            </LinearLayout>
                         </LinearLayout>
-
-
-
                     </LinearLayout>
+                </LinearLayout>
+            </android.support.design.widget.CollapsingToolbarLayout>
 
-                </android.support.design.widget.CollapsingToolbarLayout>
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="48dp">
 
-                <FrameLayout
+                <android.support.design.widget.TabLayout
+                    android:id="@+id/tlUserProfileTabs"
                     android:layout_width="match_parent"
-                    android:layout_height="48dp">
+                    android:layout_height="48dp"
+                    android:background="#01bcd5"
+                    app:tabGravity="fill"
+                    app:tabIndicatorColor="#5be5ad"
+                    app:tabIndicatorHeight="4dp"
+                    app:tabMode="fixed" />
 
-                    <android.support.design.widget.TabLayout
-                        android:id="@+id/tlUserProfileTabs"
-                        android:layout_width="match_parent"
-                        android:layout_height="48dp"
-                        android:background="#01bcd5"
-                        app:tabGravity="fill"
-                        app:tabIndicatorColor="#5be5ad"
-                        app:tabIndicatorHeight="4dp"
-                        app:tabMode="fixed" />
-
-                </FrameLayout>
-
-            </android.support.design.widget.AppBarLayout>
-
-        </android.support.design.widget.CoordinatorLayout>
-
-
+            </FrameLayout>
+        </android.support.design.widget.AppBarLayout>
+    </android.support.design.widget.CoordinatorLayout>
     <LinearLayout
         android:id="@+id/email_login_form"
         android:layout_width="match_parent"
@@ -223,4 +214,4 @@
             android:textSize="16sp"/>
 
     </LinearLayout>
-    </RelativeLayout>
+</RelativeLayout>
