--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,24 +1,17 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/activity_register"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="#084B8A">
-
-    <!-- Login progress -->
-    <ProgressBar
-        android:id="@+id/login_progress"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:visibility="gone" />
+    android:background="#084B8A"
+    tools:context="com.example.dayana.myapplication.Register"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
@@ -28,13 +21,14 @@
         android:textStyle="normal|bold"
         android:gravity="center_vertical|center_horizontal|center"
         android:textSize="30sp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
         android:id="@+id/textView" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
+        android:layout_gravity="center"
         android:layout_height="wrap_content">
+
         <RadioButton
             android:text="Person"
             android:buttonTint="#ffffff"
@@ -52,7 +46,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/radioButton2" />
-
     </RelativeLayout>
 
     <LinearLayout
@@ -77,7 +70,7 @@
                 app:srcCompat="@android:drawable/ic_dialog_email"
                 android:id="@+id/imageView6" />
 
-            <AutoCompleteTextView
+            <TextView
                 android:id="@+id/name"
                 android:background="#ffffff"
                 android:paddingLeft="10dp"
@@ -89,11 +82,8 @@
                 android:hint="Name"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
-                android:singleLine="true"
                 android:layout_toRightOf="@+id/imageView6"
                 android:layout_toEndOf="@+id/imageView6" />
-
-
         </RelativeLayout>
 
         <RelativeLayout
@@ -122,14 +112,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:hint="Email"
-                android:imeActionLabel="@string/action_sign_in_short"
                 android:imeOptions="actionUnspecified"
                 android:inputType="textPassword"
                 android:maxLines="1"
-                android:singleLine="true"
                 android:layout_toRightOf="@+id/imageView7"
                 android:layout_toEndOf="@+id/imageView7" />
-
         </RelativeLayout>
 
         <RelativeLayout
@@ -158,11 +145,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:hint="Telephone"
-                android:imeActionLabel="@string/action_sign_in_short"
                 android:imeOptions="actionUnspecified"
                 android:inputType="textPassword"
                 android:maxLines="1"
-                android:singleLine="true"
                 android:layout_toRightOf="@+id/imageView1"
                 android:layout_toEndOf="@+id/imageView1" />
         </RelativeLayout>
@@ -193,11 +178,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:hint="Password"
-                android:imeActionLabel="@string/action_sign_in_short"
                 android:imeOptions="actionUnspecified"
                 android:inputType="textPassword"
                 android:maxLines="1"
-                android:singleLine="true"
                 android:layout_toRightOf="@+id/imageView2"
                 android:layout_toEndOf="@+id/imageView2" />
         </RelativeLayout>
@@ -228,16 +211,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:hint="Confirm password"
-                android:imeActionLabel="@string/action_sign_in_short"
                 android:imeOptions="actionUnspecified"
                 android:inputType="textPassword"
                 android:maxLines="1"
-                android:singleLine="true"
                 android:layout_toRightOf="@+id/imageView3"
                 android:layout_toEndOf="@+id/imageView3" />
-
-
         </RelativeLayout>
+
         <Button
             android:id="@+id/sen_button"
             style="?android:textAppearanceSmall"
@@ -249,7 +229,6 @@
             android:textStyle="bold"
             android:textColor="#ffffff"
             android:textSize="16sp"/>
-
     </LinearLayout>
 
     <TextView
@@ -261,10 +240,6 @@
         android:layout_marginTop="10dp"
         android:textStyle="normal|bold"
         android:textSize="15sp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
         android:id="@+id/textViewP" />
-
-
-
 </LinearLayout>
