--- a/app/src/main/res/layout/activity_request.xml
+++ b/app/src/main/res/layout/activity_request.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/activity_request"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#084B8A">
-
+    android:background="#084B8A"
+    tools:context="com.example.dayana.myapplication.Request">
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/content"
@@ -50,8 +51,8 @@
 
                         <ImageView
                             android:id="@+id/ProfilePhoto"
-                            android:layout_width="@dimen/user_profile_avatar_size"
-                            android:layout_height="@dimen/user_profile_avatar_size"
+                            android:layout_width="88dp"
+                            android:layout_height="88dp"
                             android:background="#ffffff"
                             android:src="@drawable/drhouse"
                             android:layout_marginRight="16dp" />
@@ -175,7 +176,6 @@
                 android:inputType="textEmailAddress"
                 android:textSize="16sp"
                 android:maxLines="1"
-                android:singleLine="true"
                 android:layout_toRightOf="@+id/imageView6"
                 android:layout_toEndOf="@+id/imageView6" />
 
