--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -70,7 +70,7 @@
                 app:srcCompat="@android:drawable/ic_dialog_email"
                 android:id="@+id/imageView6" />
 
-            <TextView
+            <EditText
                 android:id="@+id/name"
                 android:background="#ffffff"
                 android:paddingLeft="10dp"
@@ -219,7 +219,7 @@
         </RelativeLayout>
 
         <Button
-            android:id="@+id/sen_button"
+            android:id="@+id/send_button"
             style="?android:textAppearanceSmall"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
