--- a/app/src/main/res/layout/activity_list_corp.xml
+++ b/app/src/main/res/layout/activity_list_corp.xml
@@ -112,7 +112,7 @@
                 <android.support.design.widget.TabLayout
                     android:id="@+id/tlUserProfileTabs"
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
+                    android:layout_height="56dp"
                     android:background="#01bcd5"
                     app:tabGravity="fill"
                     app:tabIndicatorColor="#5be5ad"
@@ -162,15 +162,15 @@
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
                 android:layout_width="283dp"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="56dp"
                 android:hint="Blue Fruit Corp \n 0500-4533456"
                 android:inputType="textEmailAddress"
                 android:textSize="16sp"
                 android:maxLines="2" />
 
             <ImageView
-                android:layout_width="?attr/actionBarSize"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp"
@@ -198,15 +198,15 @@
                 android:paddingTop="10dp"
                 android:layout_width="282dp"
                 android:textSize="16sp"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="56dp"
                 android:hint="Blue Fruit Corp \n 0500-4533456"
                 android:maxLines="2"
                 android:layout_toRightOf="@+id/imageView7"
                 android:layout_toEndOf="@+id/imageView7" />
 
             <ImageView
-                android:layout_width="?attr/actionBarSize"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp"
@@ -232,15 +232,15 @@
                 android:paddingTop="10dp"
                 android:layout_width="282dp"
                 android:textSize="16sp"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="56dp"
                 android:hint="Blue Fruit Corp \n 0500-4533456"
                 android:maxLines="2"
                 android:layout_toRightOf="@+id/imageView7"
                 android:layout_toEndOf="@+id/imageView7" />
 
             <ImageView
-                android:layout_width="?attr/actionBarSize"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp"
