--- a/app/src/main/res/layout/activity_main_c.xml
+++ b/app/src/main/res/layout/activity_main_c.xml
@@ -148,8 +148,8 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:layout_width="?attr/actionBarSize"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp"
@@ -167,7 +167,7 @@
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="56dp"
                 android:inputType="textEmailAddress"
                 android:textSize="16sp"
                 android:maxLines="1"
@@ -183,8 +183,8 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:layout_width="?attr/actionBarSize"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp"
@@ -203,7 +203,7 @@
                 android:paddingTop="10dp"
                 android:layout_width="match_parent"
                 android:textSize="16sp"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="56dp"
                 android:layout_toRightOf="@+id/imageView7"
                 android:layout_toEndOf="@+id/imageView7" />
 
