--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -60,8 +60,8 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:layout_width="?attr/actionBarSize"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp"
@@ -78,7 +78,7 @@
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="56dp"
                 android:hint="Name"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
@@ -92,8 +92,8 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:layout_width="?attr/actionBarSize"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp"
@@ -110,7 +110,7 @@
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="56dp"
                 android:hint="Email"
                 android:imeOptions="actionUnspecified"
                 android:inputType="textPassword"
@@ -125,8 +125,8 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:layout_width="?attr/actionBarSize"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp"
@@ -143,7 +143,7 @@
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="56dp"
                 android:hint="Telephone"
                 android:imeOptions="actionUnspecified"
                 android:inputType="textPassword"
@@ -158,8 +158,8 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:layout_width="?attr/actionBarSize"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp"
@@ -176,7 +176,7 @@
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="56dp"
                 android:hint="Password"
                 android:imeOptions="actionUnspecified"
                 android:inputType="textPassword"
@@ -191,8 +191,8 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:layout_width="?attr/actionBarSize"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp"
@@ -209,7 +209,7 @@
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="56dp"
                 android:hint="Confirm password"
                 android:imeOptions="actionUnspecified"
                 android:inputType="textPassword"
